--- a/package.json
+++ b/package.json
@@ -23,5 +23,16 @@
   "bugs": {
     "url": "https://github.com/jusopi/yarl-renderer/issues"
   },
-  "homepage": "https://github.com/jusopi/yarl-renderer"
+  "homepage": "https://github.com/jusopi/yarl-renderer",
+  "dependencies": {
+    "lodash": "^2.4.1"
+  },
+  "devDependencies": {
+    "browserify": "^7.0.3",
+    "gulp": "^3.8.10",
+    "gulp-browserify": "^0.5.0",
+    "gulp-connect": "^2.2.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^1.2.4"
+  }
 }
